--- a/old/makroevol/animations/index.html
+++ b/old/makroevol/animations/index.html
@@ -7,48 +7,48 @@
 <h2>Anim&aacute;ci&oacute;k</h2>
 <ol>
 <li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim01.html">Drift &eacute;s szelekci&oacute; egy&uuml;ttes hat&aacute;sa az all&eacute;l gyakoris&aacute;g v&aacute;ltoz&aacute;s&aacute;ra.</a>
+<a href="anim01.html">Drift &eacute;s szelekci&oacute; egy&uuml;ttes hat&aacute;sa az all&eacute;l gyakoris&aacute;g v&aacute;ltoz&aacute;s&aacute;ra.</a>
 (l&aacute;sd seldrift.r)
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim02.html">Addit&#237;v all&eacute;l hat&aacute;s &eacute;s a karakter eloszl&aacute;s</a>
+<a href="anim02.html">Addit&#237;v all&eacute;l hat&aacute;s &eacute;s a karakter eloszl&aacute;s</a>
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim03.html">Ir&aacute;ny&iacute;t&oacute; szelekci&oacute;</a>
+<a href="anim03.html">Ir&aacute;ny&iacute;t&oacute; szelekci&oacute;</a>
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim04.html">Stabiliz&aacute;l&oacute; szelekci&oacute;</a>
+<a href="anim04.html">Stabiliz&aacute;l&oacute; szelekci&oacute;</a>
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim05.html">Sz&eacute;tv&aacute;laszt&oacute; szelekci&oacute;</a>
+<a href="anim05.html">Sz&eacute;tv&aacute;laszt&oacute; szelekci&oacute;</a>
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim06.html">Diff&uacute;zi&oacute; el&aacute;gaz&aacute;ssal, szimul&aacute;ci&oacute;</a>
+<a href="anim06.html">Diff&uacute;zi&oacute; el&aacute;gaz&aacute;ssal, szimul&aacute;ci&oacute;</a>
 (l&aacute;sd bd.r)
 Revell L (2011) alapj&aacute;n (phylotools R csomag)
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim07.html">Gazda-parazitoid dinamika</a>
+<a href="anim07.html">Gazda-parazitoid dinamika</a>
 (l&aacute;sd parazitoid.r).
 Soetaert &eacute;s Herman (2009) alapj&aacute;n.
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim08.html">Karakter divergencia</a>
+<a href="anim08.html">Karakter divergencia</a>
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim09.html">Kompet&#237;ci&oacute; sejtautomata</a>
+<a href="anim09.html">Kompet&#237;ci&oacute; sejtautomata</a>
 (l&aacute;sd kompeticioca.r).
 Soetaert &eacute;s Herman (2009) alapj&aacute;n
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim10.html">A terjed&eacute;s diff&uacute;zi&oacute;s modellje</a>
+<a href="anim10.html">A terjed&eacute;s diff&uacute;zi&oacute;s modellje</a>
 (l&aacute;sd diffuzio.r))
 Soetaert &eacute;s Herman (2009) alapj&aacute;n
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim11.html">Kvantitat&#237;v jelleg szimul&aacute;ci&oacute;k: rekombin&aacute;ci&oacute;, random p&aacute;rv&aacute;laszt&aacute;s majd ir&aacute;ny&iacute;t&oacute; szelekci&oacute;</a>
+<a href="anim11.html">Kvantitat&#237;v jelleg szimul&aacute;ci&oacute;k: rekombin&aacute;ci&oacute;, random p&aacute;rv&aacute;laszt&aacute;s majd ir&aacute;ny&iacute;t&oacute; szelekci&oacute;</a>
 (l&aacute;sd kvantisim2.r)
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim12.html">Kvantitat&#237;v jelleg szimul&aacute;ci&oacute;k: ir&aacute;ny&iacute;t&oacute; szelekci&oacute; &eacute;s g&eacute;n&aacute;raml&aacute;s</a>
+<a href="anim12.html">Kvantitat&#237;v jelleg szimul&aacute;ci&oacute;k: ir&aacute;ny&iacute;t&oacute; szelekci&oacute; &eacute;s g&eacute;n&aacute;raml&aacute;s</a>
 (l&aacute;sd kvantisim3.r)
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim13.html">Kvantitat&#237;v jelleg szimul&aacute;ci&oacute;k: popul&aacute;ci&oacute;k izol&aacute;ci&oacute;ja &eacute;s f&uacute;zi&oacute;ja</a>
+<a href="anim13.html">Kvantitat&#237;v jelleg szimul&aacute;ci&oacute;k: popul&aacute;ci&oacute;k izol&aacute;ci&oacute;ja &eacute;s f&uacute;zi&oacute;ja</a>
 (l&aacute;sd kvantisim4.r)
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim14.html">Kvantitat&#237;v jelleg szimul&aacute;ci&oacute;k: elt&eacute;r&#337; ir&aacute;ny&uacute; szelekci&oacute; &eacute;s g&eacute;n&aacute;raml&aacute;s</a>
+<a href="anim14.html">Kvantitat&#237;v jelleg szimul&aacute;ci&oacute;k: elt&eacute;r&#337; ir&aacute;ny&uacute; szelekci&oacute; &eacute;s g&eacute;n&aacute;raml&aacute;s</a>
 (l&aacute;sd kvantisim5.r)
 </li><li>
-<a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/animations/anim15.html">Kvantitat&#237;v jelleg szimul&aacute;ci&oacute;k: szelekci&oacute; &eacute;s k&ouml;rnyezeti hat&aacute;s</a>
+<a href="anim15.html">Kvantitat&#237;v jelleg szimul&aacute;ci&oacute;k: szelekci&oacute; &eacute;s k&ouml;rnyezeti hat&aacute;s</a>
 (l&aacute;sd kvantisim6.r)
 </li>
 </ol>
