--- a/old/makroevol/animations/index.html
+++ b/old/makroevol/animations/index.html
@@ -53,6 +53,6 @@ Soetaert &eacute;s Herman (2009) alapj&aacute;n
 </li>
 </ol>
 <p> <br></p>
-Egy&eacute;b verzi&oacute;k a <a href="http://expbio.bio.u-szeged.hu/evolution/">honlapon</a>, R kódok <a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/R">itt</a>.
+Egy&eacute;b verzi&oacute;k a <a href="http://expbio.bio.u-szeged.hu/evolution/">honlapon</a>, R k&oacute;dok <a href="http://expbio.bio.u-szeged.hu/evolution/makroevol/R">itt</a>.
 </body>
 </html>
