--- a/old/makroevol/quiz/index.html
+++ b/old/makroevol/quiz/index.html
@@ -6,6 +6,6 @@
 <h1>Makroevol&uacute;ci&oacute;: m&oacute;dszerek &eacute;s mint&aacute;zatok</h1>
 A JavaScript teszt csak a jegyzet 
 <a href="http://expbio.bio.u-szeged.hu/evolution/">let&ouml;lt&ouml;tt</a>
-&eacute;s telep&#237;tett verzi&oacute;j&aacute;ban &eacute;rhet&#337; el.
+&eacute;s telep&#237;tett verzi&oacute;j&aacute;ban &eacute;rhet&#337; el (<a href="01/popquiz.html/">minta</a>).
 </body>
 </html>
