--- a/old/makroevol/quiz/01/popquiz.htm
+++ b/old/makroevol/quiz/01/popquiz.htm
@@ -33,7 +33,7 @@ document.cookie="ready=yes"
 <p align="center">
 <form method="POST" name="myquiz">
 <font face="Arial"><big><big>
-Kérdések (1. fejezet)
+K&eacute;rd&eacute;sek (1. fejezet)
 </big></big></font></p>
 
 <!-- QUESTIONS -->
