--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Populációgenetika és evolúció</title>
+  <title>Popul&aacute;ci&oacute;genetika &eacute;s evol&uacute;ci&oacute;</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2">
   <meta content="Zsolt Penzes" name="Author">
 </head>
@@ -10,7 +10,7 @@
 
 <ul>
 <li><a href="#a01">Popul&aacute;ci&oacute;genetika (jegyzet)</a></li>
-<li><a href="#a02">Makroevol&uacute;ci&oacute;: m&oacute;dszerek és mint&aacute;zatok (jegyzet)</a></li>
+<li><a href="#a02">Makroevol&uacute;ci&oacute;: m&oacute;dszerek &eacute;s mint&aacute;zatok (jegyzet)</a></li>
 <li><a href="#a03">Olvas&oacute;leck&eacute;k</a></li>
 <li><a href="http://expbio.bio.u-szeged.hu/evolution/filogenetika/index.html">Filogenetika gyakorlatokhoz</a></li>
 <li><a href="old/filogen/filogen_sz049.pdf">Filogenetika - k&ouml;z&eacute;piskol&aacute;soknak, tan&aacute;roknak (pdf)</a></li>
@@ -29,7 +29,7 @@ A jegyzet fejleszt&eacute;s alatt &aacute;ll.<br>
 
 <p>
 <a name="a02">
-<strong>Makroevol&uacute;ci&oacute;: m&oacute;dszerek és mint&aacute;zatok (jegyzet)</strong><br>
+<strong>Makroevol&uacute;ci&oacute;: m&oacute;dszerek &eacute;s mint&aacute;zatok (jegyzet)</strong><br>
 
 A jegyzet fejleszt&eacute;s alatt &aacute;ll. <br>
 1.0 verzi&oacute; (2013.06.16):  
@@ -67,7 +67,7 @@ A jegyzet fejleszt&eacute;s alatt &aacute;ll. <br>
 </p>
 
 <hr>
-<strong>Kapcsolat:</strong>&nbsp;Pénzes Zsolt<br>
+<strong>Kapcsolat:</strong>&nbsp;P&eacute;nzes Zsolt<br>
 
 </body>
 </html>
