--- a/index.html
+++ b/index.html
@@ -1,73 +1,10 @@
 <html>
 <head>
-  <title>Popul&aacute;ci&oacute;genetika &eacute;s evol&uacute;ci&oacute;</title>
+  <title>Eltávolítva</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2">
   <meta content="Zsolt Penzes" name="Author">
 </head>
 <body>
-
-<h1>Evol&uacute;ci&oacute; kurzusokhoz - tartalom</h1>
-
-<ul>
-<li><a href="#a01">Popul&aacute;ci&oacute;genetika (jegyzet)</a></li>
-<li><a href="#a02">Makroevol&uacute;ci&oacute;: m&oacute;dszerek &eacute;s mint&aacute;zatok (jegyzet)</a></li>
-<li><a href="#a03">Olvas&oacute;leck&eacute;k</a></li>
-<li><a href="http://expbio.bio.u-szeged.hu/evolution/filogenetika/index.html">Filogenetika gyakorlatokhoz</a></li>
-<li><a href="old/filogen/filogen_sz049.pdf">Filogenetika - k&ouml;z&eacute;piskol&aacute;soknak, tan&aacute;roknak (pdf)</a></li>
-</ul>
-
-<hr>
-<p>
-<a name="a01">
-<strong>Popul&aacute;ci&oacute;genetika (jegyzet)</strong><br>
-
-A jegyzet fejleszt&eacute;s alatt &aacute;ll.<br>
-0.6 verzi&oacute; (2011.11.29) 
-&nbsp;<a href="old/popgen/book.html">online (egy html)</a> (UTF-8 karakterk&oacute;dol&aacute;s)
-<br>
-</p>
-
-<p>
-<a name="a02">
-<strong>Makroevol&uacute;ci&oacute;: m&oacute;dszerek &eacute;s mint&aacute;zatok (jegyzet)</strong><br>
-
-A jegyzet fejleszt&eacute;s alatt &aacute;ll. <br>
-1.0 verzi&oacute; (2013.06.16):  
-&nbsp;<a href="old/makroevol/book.html">online (egy html)</a> (UTF-8 karakterk&oacute;dol&aacute;s)<br>
-</p>
-
-<p>
-<a name="a03">
-<strong>Olvas&oacute;leck&eacute;k</strong> (SZTE ETA):
-<ul>
-<li>Molekul&aacute;ris &ouml;kol&oacute;gia</li>
-<ol>
-<li><a href="https://eta.bibl.u-szeged.hu/2194">Popul&aacute;ci&oacute;k genetikai v&aacute;ltozatoss&aacute;ga.</a> (2019)</li>
-<li><a href="https://eta.bibl.u-szeged.hu/2329">Ide&aacute;lis popul&aacute;ci&oacute;.</a> (2019)</li>
-<li><a href="https://eta.bibl.u-szeged.hu/2195">A genetikai v&aacute;ltozatoss&aacute;g m&eacute;r&#337;sz&aacute;mai.</a> (2019)</li>
-<li><a href="https://eta.bibl.u-szeged.hu/3370">Neutr&aacute;lis v&aacute;ltoz&aacute;s.</a> (2020)</li>
-<li><a href="https://eta.bibl.u-szeged.hu/3697">A koaleszcens.</a> (2020)</li>
-<li><a href="https://eta.bibl.u-szeged.hu/5021">Popul&aacute;ci&oacute;k szerkezete.</a> (2020)</li>
-<li><a href="https://eta.bibl.u-szeged.hu/5022">Popul&aacute;ci&oacute;k szerkezete II.</a> (2020)</li>
-<li><a href="https://eta.bibl.u-szeged.hu/5566">Popul&aacute;ci&oacute;k t&ouml;rt&eacute;net&eacute;nek rekonstrukci&oacute;ja.</a> (2021)</li>
-<li><a href="https://eta.bibl.u-szeged.hu/5638">Kvantitat&iacute;v jellegek.</a> (2021)</li>
-</ol>
-<li>Filogenetika</li>
-<ol>
-<li><a href="https://eta.bibl.u-szeged.hu/2656">Filogenetika: koncepci&oacute;.</a> (2019)</li>
-<li><a href="https://eta.bibl.u-szeged.hu/2657">Filogenetika &eacute;s evol&uacute;ci&oacute;.</a> (2019)</li>
-<li><a href="https://eta.bibl.u-szeged.hu/5650">Filogenetikai rekonstrukci&oacute; gyakorlat.</a> (2020)</li>
-</ol>
-<li>Biol&oacute;gia BSc z&aacute;r&oacute;vizsga felk&eacute;sz&iacute;t&#337; (2020)</li>
-<ol>
-<li><a href="https://eta.bibl.u-szeged.hu/3048/29/15A_Az%20evol%C3%BAci%C3%B3s%20v%C3%A1ltoz%C3%A1s%20elemi%20t%C3%A9nyez%C5%91i_%20Term%C3%A9szetes%20v%C3%A1ltozatoss%C3%A1g%20%C3%A9s%20eredete%2C%20term%C3%A9szetes%20szelekci%C3%B3%20%C3%A9s%20adapt%C3%A1ci%C3%B3%2C%20genetikai%20sodr%C3%B3d%C3%A1s%2C%20g%C3%A9n%C3%A1raml%C3%A1s.pdf"> Az evol&uacute;ci&oacute;s v&aacute;ltoz&aacute;s elemi t&eacute;nyez&#337;i.</a></li>
-<li><a href="https://eta.bibl.u-szeged.hu/3048/31/16A_Evol%C3%BAci%C3%B3s%20lesz%C3%A1rmaz%C3%A1s%20%28filogenetika%29%2C%20faj%20%C3%A9s%20fajk%C3%A9pz%C5%91d%C3%A9s.pdf">Evol&uacute;ci&oacute;s lesz&aacute;rmaz&aacute;s (filogenetika), faj &eacute;s fajk&eacute;pz&#337;d&eacute;s.</a></li>
-</ol>
-</ul>
-</p>
-
-<hr>
-<strong>Kapcsolat:</strong>&nbsp;P&eacute;nzes Zsolt<br>
-
+Az oldal megszűnt.
 </body>
 </html>
